--- a/templates/formation/ListFormationEtudiant.html.twig
+++ b/templates/formation/ListFormationEtudiant.html.twig
@@ -37,7 +37,7 @@
                             <span class="float-end price-hp">Type :{{formation.type}}</span>
                             </div>
                         </div>
-                        <div class="text-center my-4"> <a href ="{{ path ('newreservation')}}"class="btn btn-info">Reserver</a>
+                        <div class="text-center my-4"> <a href ="{{ path ('newreservation')}}"class="btn btn-outline-info">Reserver</a>
                         </div>
                     </div>
                 </div>
