--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -86,7 +86,7 @@
 
 
 
-        <a href="{{ path('DownloadProduitsDataFormation') }}" class="btn btn-dark waves-effect waves-light">Download PDF</a>
+        <a href="{{ path('DownloadProduitsDataFormation') }}" class="btn btn-outline-dark waves-effect waves-light">Download PDF</a>
 
 <br>
 
