--- a/templates/reservation/newreservation.html.twig
+++ b/templates/reservation/newreservation.html.twig
@@ -30,12 +30,12 @@
                     <br/>
                     <div class="col-sm-10" style="display: flex;align-items: center;justify-content: center">
 
-                        {{ form_widget(f.Ajouter,{'attr':{'class':'btn btn-primary'}}) }}
+                        {{ form_widget(f.Ajouter,{'attr':{'class':'btn btn-outline-info'}}) }}
                     </div>
 
                     {{ form_end(f) }}
 
-                    <a href="{{ 'reservationFormateur' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des reservations</a>
+                    <a href="{{ 'acceuil' }}" class="btn btn-outline-info">Retour à la liste des reservations</a>
                 </div>
             </div>
         </div>
