--- a/templates/score/index.html.twig
+++ b/templates/score/index.html.twig
@@ -54,10 +54,7 @@
 <div style="display: flex;align-items: center;justify-content: center;padding:10px">
 	<a class="btn btn-outline-info" href="{{ path('app_quiz_new') }}">Passer de nouveau</a>
 	<span>
-		<button style="display:none;" class="btn btn-outline-success" id="verifreponses">Verifier vos réponses</button>
-	</span>
-	<span>
-		<a class="btn btn-outline-dark" href={{ path('app_score_show',{'idscore': 10} )}}>Go to Home</a>
+		<a class="btn btn-outline-dark" href={{ path('acceuil')}}>Go to Home</a>
 	</span>
 </div>
 
