--- a/templates/livre/infoLivre.html.twig
+++ b/templates/livre/infoLivre.html.twig
@@ -2,110 +2,109 @@
 
 {% block body %}
 
-    <br><br><br><br><br><br><br>
-    <center>
-    <div class="livre-container">
+	<br><br><br><br><br><br><br>
+	<center>
+		<div class="livre-container">
 
-        <h1 class="text-mulit-light text-black hasSoustitre" itemprop="name">{{infoL.titrel}}</h1>
-
-
+			<h1 class="text-mulit-light text-black hasSoustitre" itemprop="name">{{infoL.titrel}}</h1>
 
 
+			<p class=" text-mulit-light mb-5">
+				Auteur(s) :
+				{{ infoL.auteurl  }}
+				<a href="/livres/collections/best-of,0-44454.html" class="text-gray">Best of</a>
+			</p>
+			<p class="mentions">
+				La bibliotheque
+				<span itemprop="numberOfPages">{{ infoL.intc }}</span>
+			</p>
 
-        <p class=" text-mulit-light mb-5">
-            Auteur(s) :  {{ infoL.auteurl  }}
-            <a href="/livres/collections/best-of,0-44454.html" class="text-gray">Best of</a>
-        </p>
-        <p class="mentions">
-            La bibliotheque <span itemprop="numberOfPages">{{ infoL.intc }}</span>                                              </p>
+			<div class="add-to-cart mb-10">
+				<span class="dispo nowrap">
+					<i class="perso-icon-fiche perso-icon-dispo-1"></i>
+					Disponible
+				</span>
+				<form method="post" action="/catalogue-ajax/add-to-cart" id="form-add-9782816194883" class="form-addtocart form-inline mt-10">
+					<input type="hidden" name="lang" value="FR">
+					<input type="hidden" name="ean" value="9782816194883">
+					<input type="hidden" name="qte" value="1">
+					<input type="hidden" name="id" value="0-7546281">
+					<span class="btAddToCart">
+						<i class="perso-icon-fiche-cart perso-icon-cart"></i>
+						<span class="text">noter le livre</span>
+					</span>
 
-        <div class="add-to-cart mb-10">
-            <span class="dispo nowrap"><i class="perso-icon-fiche perso-icon-dispo-1"></i> Disponible </span>
-            <form method="post" action="/catalogue-ajax/add-to-cart" id="form-add-9782816194883" class="form-addtocart form-inline mt-10">
-                <input type="hidden" name="lang" value="FR">
-                <input type="hidden" name="ean" value="9782816194883">
-                <input type="hidden" name="qte" value="1">
-                <input type="hidden" name="id" value="0-7546281">
-                <span class="btAddToCart"><i class="perso-icon-fiche-cart perso-icon-cart"></i><span class="text">noter le livre</span></span>
-
-            </form>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 text-gray mt-5 mb-5">
-                <span class="">Ce livre est également présenté dans notre sélection :</span>
-                <ul>
-                </ul>
-            </div>
-        </div>
-        <div class="row mb-5 mt-30">
-            <div class="col-sm-6 col-lg-4 xs-mb-5">
-                <a href="#" rel="nofollow" class="btn-login-review text-mulit-light text-orange"><i class="perso-icon-fiche-cart perso-icon-review"></i> Donner votre avis sur ce livre</a>
-            </div>
-            <div class="col-sm-6 col-lg-4 xs-mb-5">
-                <span class="text-mulit-light text-orange"><a href="#" rel="nofollow" class="btn-login-wish-list text-orange"><i class="perso-icon-fiche-cart perso-icon-list"></i> Ajouter à votre liste d'envie</a></span>
-<br>
-
-
-                <div class="container">
-                <div class="row">
-
-                    <form action="add_rate.php" method="post">
-
-                        <div>
-                            <h3>rating livre</h3>
-                        </div>
-
-
-                        <div class="rateyo" id= "rating"
-                             data-rateyo-rating="4"
-                             data-rateyo-num-stars="5"
-                             data-rateyo-score="3">
-                        </div>
-
-                        <span class='result'>0 </span>
-                        <input  name="rating">
-
-                </div>
-
-                <div><input type="submit" name="add"> </div>
-
-                </form>
-            </div>
-        </div>
+				</form>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 text-gray mt-5 mb-5">
+					<span class="">Ce livre est également présenté dans notre sélection :</span>
+					<ul></ul>
+				</div>
+			</div>
+			<div class="row mb-5 mt-30">
+				<div class="col-sm-6 col-lg-4 xs-mb-5">
+					<a href="#" rel="nofollow" class="btn-login-review text-mulit-light text-orange">
+						<i class="perso-icon-fiche-cart perso-icon-review"></i>
+						Donner votre avis sur ce livre</a>
+				</div>
+				<div class="col-sm-6 col-lg-4 xs-mb-5">
+					<span class="text-mulit-light text-orange">
+						<a href="#" rel="nofollow" class="btn-login-wish-list text-orange">
+							<i class="perso-icon-fiche-cart perso-icon-list"></i>
+							Ajouter à votre liste d'envie</a>
+					</span>
+					<br>
 
 
+					<div class="container">
+						<div class="row">
+
+							<form action="add_rate.php" method="post">
+
+								<div>
+									<h3>rating livre</h3>
+								</div>
 
 
+								<div class="rateyo" id="rating" data-rateyo-rating="4" data-rateyo-num-stars="5" data-rateyo-score="3"></div>
+
+								<span class='result'>0
+								</span>
+								<input name="rating">
+
+							</div>
+
+							<div><input type="submit" name="add">
+							</div>
+
+						</form>
+					</div>
+				</div>
 
 
+				<br>
 
 
-
-                <br>
-
-
-
-            </div>
-        </div>
+			</div>
+		</div>
 
 
+		<hr class="mt-0">
+		<div class="row mb-20">
+			<div id="4couv" class="col-xs-12">
+				<h4 class="text-mulit-light text-orange">Description du livre</h4>
+				<p>
+					<b>Le best of du voyage en 2022</b>
+				</p>
+				<p>{{ infoL.descriptionl }}</p>
+				<ul></ul>
 
-        <hr class="mt-0">
-        <div class="row mb-20">
-            <div id="4couv" class="col-xs-12"><h4 class="text-mulit-light text-orange">Description du livre</h4><p>
-                    <b>Le best of du voyage en 2022</b>
-                </p><p>{{ infoL.descriptionl }}</p><ul>
-
-                </ul>
-
-            </div>
-
-
-        </div>
-
-    </div>
-
-    </center>
+			</div>
 
 
-{% endblock %}
+		</div>
+
+	</div>
+
+</center>{% endblock %}
