--- a/templates/livre/livreClient.html.twig
+++ b/templates/livre/livreClient.html.twig
@@ -1,119 +1,136 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-  <style>
-    body{
-      background-color:#FFFFFF;
-    }
-    .wrapper{margin:10vh}
+	<style>
+		body {
+			background-color: #FFFFFF;
+		}
+		.wrapper {
+			margin: 10vh
+		}
 
 
-      .card{
-        border: none;
-        transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-        overflow:hidden;
-        border-radius:20px;
-        min-height:450px;
-        box-shadow: 0 0 12px 0 rgba(0,0,0,0.2);
+		.card {
+			border: none;
+			transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+			overflow: hidden;
+			border-radius: 20px;
+			min-height: 450px;
+			box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
 
-    @media (max-width: 768px) {
-      min-height:350px;
-    }
+			@media(max-width: 768px) {
+				min-height: 350px;
+			}
 
-    @media (max-width: 420px) {
-      min-height:300px;
-    }
+			@media(max-width: 420px) {
+				min-height: 300px;
+			}
 
-    &.card-has-bg{
-       transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-       background-size:120%;
-       background-repeat:no-repeat;
-       background-position: center center;
-    &:before {
-       content: '';
-       position: absolute;
-       top: 0;
-       right: 0;
-       bottom: 0;
-       left: 0;
-       background: inherit;
-       -webkit-filter: grayscale(1);
-       -moz-filter: grayscale(100%);
-       -ms-filter: grayscale(100%);
-       -o-filter: grayscale(100%);
-       filter: grayscale(100%);}
+			&.card-has-bg {
+				transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+				background-size: 120%;
+				background-repeat: no-repeat;
+				background-position: center center;
+				&:before {
+					content: '';
+					position: absolute;
+					top: 0;
+					right: 0;
+					bottom: 0;
+					left: 0;
+					background: inherit;
+					-webkit-filter: grayscale(1);
+					-moz-filter: grayscale(100%);
+					-ms-filter: grayscale(100%);
+					-o-filter: grayscale(100%);
+					filter: grayscale(100%);
+				}
 
-    &:hover {
-       transform: scale(0.98);
-       box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
-       background-size:130%;
-       transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+				&:hover {
+					transform: scale(0.98);
+					box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
+					background-size: 130%;
+					transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
 
-    .card-img-overlay {
-      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-      background: rgb(35,79,109);
-      background: linear-gradient(0deg, rgba(4,69,114,0.5) 0%, rgba(4,69,114,1) 100%);
-    }
-    }
-    }
-    .card-footer{
-      background: none;
-      border-top: none;
-    .media{
-    img{
-      border:solid 3px rgba(234,95,0,0.3);
-    }
-    }
-    }
-    .card-meta{color:orange}
-    .card-body{
-      transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    }
-    &:hover {
-    .card-body{
-      margin-top:30px;
-      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    }
-    cursor: pointer;
-    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    }
-    .card-img-overlay {
-      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-      background: rgb(35,79,109);
-      background: linear-gradient(0deg, rgba(35,79,109,0.3785889355742297) 0%, rgba(69,95,113,1) 100%);
-    }
-    }
-  </style>
+					.card-img-overlay {
+						transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+						background: rgb(35, 79, 109);
+						background: linear-gradient(0deg, rgba(4,69,114,0.5) 0%, rgba(4,69,114,1) 100%);
+					}
+				}
+			}
+			.card-footer {
+				background: none;
+				border-top: none;
+				.media {
+					img {
+						border: solid 3px rgba(234, 95, 0, 0.3);
+					}
+				}
+			}
+			.card-meta {
+				color: orange
+			}
+			.card-body {
+				transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+			}
+			&:hover {
+				.card-body {
+					margin-top: 30px;
+					transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+				}
+				cursor: pointer;
+				transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+			}
+			.card-img-overlay {
+				transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+				background: rgb(35, 79, 109);
+				background: linear-gradient(0deg, rgba(35,79,109,0.3785889355742297) 0%, rgba(69,95,113,1) 100%);
+			}
+		}
+	</style>
 
-  <section class="wrapper">
-  <div class="container">
+	<section class="wrapper">
+		<div class="container">
 
-    <div class="row">
-      {% for c in lv %}
-      <div class="col-md-4"> <a href ="{{ path ('infoLivre',{'id':c.idl })}}"><div class="card text-white card-has-bg click-col" style="background-image:url({{asset('uploads/' ~ c.image) }});">
-          <img class="card-img d-none" src="{{asset('uploads/' ~ c.image) }}" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
-          <a href ="{{ path ('infoLivre',{'id':c.idl })}}">     <div class="card-img-overlay d-flex flex-column">
-            <div class="card-body">
-              <small class="card-meta mb-2"></small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">{{c.descriptionl}}</a></h4>
-              <small><i class="far fa-clock"></i> </small>
-            </div>
-            <div class="card-footer">
-              <div class="media">
-                <div class="media-body">
-                  <h6 class="my-0 text-white d-block"><a href ="{{ path ('infoLivre',{'id':c.idl })}}">{{ c.titrel }}</a></h6>
-                  <small> auteur :{{c.auteurl}}</small>
-                </div>
-              </div>
-            </div>
-            </div> </a>
-          </div></a></div>
+			<div class="row">
+				{% for c in lv %}
+					<div class="col-md-4">
+						<a href="{{ path ('infoLivre',{'id':c.idl })}}">
+							<div class="card text-white card-has-bg click-col" style="background-image:url({{asset('uploads/' ~ c.image) }});">
+								<img class="card-img d-none" src="{{asset('uploads/' ~ c.image) }}" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+								<a href="{{ path ('infoLivre',{'id':c.idl })}}">
+									<div class="card-img-overlay d-flex flex-column">
+										<div class="card-body">
+											<small class="card-meta mb-2"></small>
+											<h4 class="card-title mt-0 ">
+												<a class="text-white" herf="#">{{c.descriptionl}}</a>
+											</h4>
+											<small>
+												<i class="far fa-clock"></i>
+											</small>
+										</div>
+										<div class="card-footer">
+											<div class="media">
+												<div class="media-body">
+													<h6 class="my-0 text-white d-block">
+														<a href="{{ path ('infoLivre',{'id':c.idl })}}">{{ c.titrel }}</a>
+													</h6>
+													<small>
+														auteur :{{c.auteurl}}</small>
+												</div>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+						</a>
+					</div>
 
-      {% endfor %}
-    </div>
+				{% endfor %}
+			</div>
 
-  </div>
-</section>
-
+		</div>
+	</section>
 
 
 {% endblock %}
