--- a/templates/score/show.html.twig
+++ b/templates/score/show.html.twig
@@ -7,7 +7,7 @@
 
 	<div align="center" style="padding: 30px;">
 		<span>
-			<a class="btn btn-outline-success" href="{{ path('app_score_index') }}">Back to Home</a>
+			<a class="btn btn-outline-success" href="{{ path('acceuil') }}">Back to Home</a>
 		</span>
 		<span>
 			<a class="btn btn-outline-primary" href="{{ path('app_quiz_new') }}">Passer Quiz</a>
