--- a/templates/acceuil/acceuil.html.twig
+++ b/templates/acceuil/acceuil.html.twig
@@ -57,27 +57,22 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                         <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
                         <h1 class="mb-4">Welcome to MonStage</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">MonStage is the #1 job site in the Tunisia strives to put job seekers first,
+                            giving them free access to search for jobs, post resumes, and research companies. Every day, we connect millions of people to new opportunities.</p>
                         <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Formation</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Stages</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Quiz</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>CV</p>
                             </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
-                            </div>
+
                         </div>
                         <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
                     </div>
@@ -97,8 +92,8 @@
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                                <h5 class="mb-3">Skilled Instructors</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <h5 class="mb-3">Formation</h5>
+                                <p>Formation  par des professionnels et des experts dans le domaine avec un environnement agréable.</p>
                             </div>
                         </div>
                     </div>
@@ -106,8 +101,8 @@
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                                <h5 class="mb-3">Online Classes</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <h5 class="mb-3">Quiz</h5>
+                                <p>Testez vos connaissances afin de réviser ou simplement améliorer votre niveau</p>
                             </div>
                         </div>
                     </div>
@@ -115,8 +110,8 @@
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                                <h5 class="mb-3">Home Projects</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <h5 class="mb-3">Stage</h5>
+                                <p>Période d'études pratiques exigée pour certaines professions.</p>
                             </div>
                         </div>
                     </div>
@@ -124,8 +119,8 @@
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                                <h5 class="mb-3">Book Library</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                                <h5 class="mb-3">Bibliotheque</h5>
+                                <p>Lieu où est conservée et lue une collection organisée de livres.</p>
                             </div>
                         </div>
                     </div>
@@ -141,7 +136,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center text-primary px-3">Categories</h6>
-                    <h1 class="mb-5">Courses Categories</h1>
+                    <h1 class="mb-5">Formation Categories</h1>
                 </div>
                 <div class="row g-3">
                     <div class="col-lg-7 col-md-6">
@@ -150,7 +145,7 @@
                                 <a class="position-relative d-block overflow-hidden" href="">
                                     <img class="img-fluid" src="{{ asset('assets2/img/cat-1.jpg') }}" alt="">
                                     <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                        <h5 class="m-0">Web Design</h5>
+                                        <h5 class="m-0">JAVA</h5>
                                         <small class="text-primary">49 Courses</small>
                                     </div>
                                 </a>
@@ -168,7 +163,7 @@
                                 <a class="position-relative d-block overflow-hidden" href="">
                                     <img class="img-fluid" src="{{ asset('assets2/img/cat-3.jpg') }}" alt="">
                                     <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
-                                        <h5 class="m-0">Video Editing</h5>
+                                        <h5 class="m-0">Symfony</h5>
                                         <small class="text-primary">49 Courses</small>
                                     </div>
                                 </a>
@@ -179,7 +174,7 @@
                         <a class="position-relative d-block h-100 overflow-hidden" href="">
                             <img class="img-fluid position-absolute w-100 h-100" src="{{ asset('assets2/img/cat-4.jpg') }}" alt="" style="object-fit: cover;">
                             <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin:  1px;">
-                                <h5 class="m-0">Online Marketing</h5>
+                                <h5 class="m-0">JQUERY</h5>
                                 <small class="text-primary">49 Courses</small>
                             </div>
                         </a>
@@ -294,7 +289,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
-                    <h1 class="mb-5">Expert Instructors</h1>
+                    <h1 class="mb-5">Notres Equipe</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -310,8 +305,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Instructor Name</h5>
-                                <small>Designation</small>
+                                <h5 class="mb-0">Skander Msalmi</h5>
+                                <small>Developpeur Full-Stack</small>
                             </div>
                         </div>
                     </div>
@@ -328,8 +323,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Instructor Name</h5>
-                                <small>Designation</small>
+                                <h5 class="mb-0">Oussama Yahmadi</h5>
+                                <small>Integrateur</small>
                             </div>
                         </div>
                     </div>
@@ -346,8 +341,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Instructor Name</h5>
-                                <small>Designation</small>
+                                <h5 class="mb-0"> Abdel Adhim Chalouah </h5>
+                                <small>Developpeur JAVA</small>
                             </div>
                         </div>
                     </div>
@@ -364,8 +359,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4">
-                                <h5 class="mb-0">Instructor Name</h5>
-                                <small>Designation</small>
+                                <h5 class="mb-0">Khalil Rebhi</h5>
+                                <small>Web Design</small>
                             </div>
                         </div>
                     </div>
