integration livre +bibliotheque +Fix twigs livre +info livre

--- a/templates/rate/download.html.twig
+++ b/templates/rate/download.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <embed src="{{asset('uploads/' ~ ddd.pdfivre) }}" />
+    <p> Votre téléchargement est terminé </p>
+
 {% endblock %}
