--- a/templates/rate/livre.html.twig
+++ b/templates/rate/livre.html.twig
@@ -6,24 +6,156 @@
 {% endblock %}
 {% block body %}
     <style>
-        img {
+
+
+        :root {
+            --surface-color: #fef8f8;
+            --curve: 40;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Noto Sans JP', sans-serif;
+            background-color:#fff;
+        }
+
+        .cards {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin: 4rem 5vw;
+            padding: 0;
+            list-style-type: none;
+        }
+
+        .card {
+            position: relative;
+            display: block;
+            height: 100%;
+            border-radius: calc(var(--curve) * 1px);
+            overflow: hidden;
+            text-decoration: none;
+        }
+
+        .card__image {
+            width: 100%;
+            height: auto;
+        }
+
+        .card__overlay {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
+            border-radius: calc(var(--curve) * 1px);
+            background-color: var(--surface-color);
+            transform: translateY(100%);
+            transition: .2s ease-in-out;
+        }
+
+        .card:hover .card__overlay {
+            transform: translateY(0);
+        }
+
+        .card__header {
+            position: relative;
+            display: flex;
+            align-items: center;
+            gap: 2em;
+            padding: 2em;
+            border-radius: calc(var(--curve) * 1px) 0 0 0;
+            background-color: var(--surface-color);
+            transform: translateY(-100%);
+            transition: .2s ease-in-out;
+        }
+
+        .card__arc {
+            width: 80px;
+            height: 80px;
+            position: absolute;
+            bottom: 100%;
+            right: 0;
+            z-index: 1;
+        }
+
+        .card__arc path {
+            fill: var(--surface-color);
+            d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+        }
+
+        .card:hover .card__header {
+            transform: translateY(0);
+        }
+
+        .card__thumb {
+            flex-shrink: 0;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
+        }
+
+        .card__title {
+            font-size: 1em;
+            margin: 0 0 .3em;
+            color: #6A515E;
+        }
+
+        .card__tagline {
+            display: block;
+            margin: 1em 0;
+            font-family: "MockFlowFont";
+            font-size: .8em;
+            color: #6A515E;
+        }
+
+        .card__status {
+            font-size: .8em;
+            color: #6A515E;
+        }
+
+        .card__description {
+            padding: 0 2em 2em;
+            margin: 0;
+            color: #6A515E;
+            font-family: "MockFlowFont";
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+            overflow: hidden;
         }
     </style>
 
-    <br><br><
 
     <center>
-<img src="{{ asset('uploads/' ~ infoL.image) }}" alt="Profile" class="rounded-circle" width=250px height=250px><br>{{infoL.titrel}}</h4> <br>
+        <div style="width:500px; height: 500px ">
+    <ul class="cards">
+        <li>
+            <a href="" class="card">
+                <img src="{{ asset('uploads/' ~ infoL.image) }}" alt="Profile" class="card__image" alt="" width="40px" height="40px">
+                <div class="card__overlay">
+                    <div class="card__header">
+                        <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>
+                        <img class="card__thumb" src="{{ asset('uploads/' ~ infoL.image) }}" alt="" />
+                        <div class="card__header-text">
+                            <h3 class="card__title">{{infoL.titrel}}</h3>
+                            <span class="card__status"> Auteur(s) :  {{ infoL.auteurl  }}</span>
+                        </div>
+                    </div>
+                    <p class="card__description">{{ infoL.descriptionl }}</p>
+                  <p><h4> La note : {{ infoL.RateTotal | number_format(2) }} / 5 <i class="fa fa-heart"></i> </h4></p>
+                </div>
+            </a>
+        </li>
+    </ul>
+        </div>
+        </center>
 
-        <h4> Auteur(s) :  {{ infoL.auteurl  }}</h4> <br>
-
-
-						<p>{{ infoL.descriptionl }}</p> <br>
-
-
-
-    <h4> La note : {{ infoL.RateTotal | number_format(2) }} / 5 <i class="fa fa-heart"></i> </h4>
+<br> <br>
+<center>
         <div class="container">
                 <div class="row">
 
@@ -43,18 +175,22 @@
                         <span class='result'>0 </span>
                         <input type="hidden" name="rating">
 
-                </div>
 
                 <div><button type="submit" class="btn btn-danger"> Voter </button> </div>
 
                 </form>
             </div>
         </div>
+</center>
 
        <br>
+    <center>
             Vous pouvez telecharger ce livre
     <a href ="{{ path ('telecharger',{'id':infoL.idl })}}">    <button  class="btn btn-success"
         type="button"> telecharger <i class="fa fa-file"></i> </button> </a>
+        </div>
+
+    </center>
         <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js') }}"></script>
         <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js') }}"></script>
 
