--- a/templates/security/reset_password_form.html.twig
+++ b/templates/security/reset_password_form.html.twig
@@ -7,7 +7,7 @@
     <div class="block" style="display: flex;justify-content: center;align-items: center;margin-top: 120px; padding: 20px">
         {{ form_start(form) }}
         {{ form_rest(form) }}
-        <button class="btn btn-primary" style="margin-top:50px;margin-left: 20%">Envoyer</button>
+        <button class="btn btn-outline-info" style="margin-top:50px;margin-left: 20%">Envoyer</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
