--- a/templates/formation/ListFormationAdmin.html.twig
+++ b/templates/formation/ListFormationAdmin.html.twig
@@ -83,7 +83,7 @@
 
 
 
-            <a href="{{ path('DownloadProduitsDataFormation') }}" class="btn btn-dark waves-effect waves-light">Download PDF</a>
+            <a href="{{ path('DownloadProduitsDataFormation') }}" class="btn btn-outline-info waves-effect waves-light">Download PDF</a>
 
 
 
@@ -98,9 +98,10 @@
         </table>
 
 
-        <div class="pagination">
-            {{ knp_pagination_render(f) }}
-        </div>
+	<main class="d-flex justify-content-center">
+		{% do f.setPageRange(2) %}
+		{{ knp_pagination_render (f ,'pagination.html.twig') }}
+	</main>
 
 
 
