--- a/templates/stage/admin.html.twig
+++ b/templates/stage/admin.html.twig
@@ -33,7 +33,7 @@
 					<td>{{ stage.domaine }}</td>
 					<td>{{ stage.description }}</td>
 					<td>{{ stage.sujet }}</td>
-					<td>{{ stage.datedebut | date}}</td>
+					<td>{{ stage.datedebut | date('D-M-Y')}}</td>
 
 
 				</tr>
