--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -136,7 +136,7 @@
 						{% elseif app.user.role == "Formateur" %}
 							<a href="{{path('ListFormationEtudiant')}}" class="nav-item nav-link ">Liste des formations</a>
 							<a href="{{path('app_reservation_Etudiant')}}" class="nav-item nav-link ">Mes reservations</a>
-						{% else %}
+						{% elseif app.user.role == "Recruteur" %}
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Mes Stages</a>
 							<a href="404.html" class="dropdown-item">Mes Demandes de stages</a>
 
@@ -212,7 +212,7 @@
 				<p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
 				<div class="position-relative mx-auto" style="max-width: 400px;">
 					<input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-					<button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+					<button type="button" class="btn btn-info py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
 				</div>
 			</div>
 		</div>
