--- a/templates/rate/livre.html.twig
+++ b/templates/rate/livre.html.twig
@@ -159,7 +159,7 @@
 <center>
         <div class="container">
                 <div class="row">
-
+                    <form action="http://127.0.0.1:8000/rate/{{ infoL.idl }}" method="POST">
 
 				<div>
 					<h3>rating livre</h3>
