--- a/templates/bibliotheque/createBiblio.html.twig
+++ b/templates/bibliotheque/createBiblio.html.twig
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="col-12">
                                 <center>
-                                    <a href="{{ path('addBibliotheque') }}" >  {{ form_widget (form.ajouter,{'attr':{'class':'btn btn-outline-info'}}) }} </a></center>
+                                    <a href="{{ path('addBibliotheque') }}" >  {{ form_widget (form.Confirmer,{'attr':{'class':'btn btn-outline-info'}}) }} </a></center>
                                 </div>
 
                                 {{ form_end (form) }}
