--- a/templates/livre/updateLivre.html.twig
+++ b/templates/livre/updateLivre.html.twig
@@ -57,7 +57,7 @@
                             <div class="top-margin">
                                 <label> Image en format .jpg  <span class="text-danger">*</span></label>
 
-                                {{ form_row (form.imageFile)}}
+                                {{ form_row (form.image)}}
 
                             </div>
 
@@ -70,7 +70,7 @@
 
                             <br> <br>
                             <center><div>
-                                    {{ form_widget (form.ajouter,{'attr':{'class':'btn btn-primary'}}) }}
+                                    {{ form_widget (form.ajouter,{'attr':{'class':'btn btn-outline-info'}}) }}
                                 </div></center>
                             {{ form_end (form) }}
                             <hr>
