--- a/templates/question/_form.html.twig
+++ b/templates/question/_form.html.twig
@@ -49,5 +49,5 @@
 
 									{% endfor %}
 								</ul>
-								<button class="btn btn-outline-success">{{ button_label|default('Save') }}</button>
+								<button class="btn btn-outline-info">{{ button_label|default('Save') }}</button>
 								{{ form_end(form) }}
