--- a/templates/bibliotheque/updateBiblio.html.twig
+++ b/templates/bibliotheque/updateBiblio.html.twig
@@ -14,7 +14,6 @@
                             <div class="d-flex justify-content-center py-4">
                                 <a href="index.html" class="logo d-flex align-items-center w-auto">
                                     <img src="assets/img/logo.png" alt="">
-                                    <span class="d-none d-lg-block">NiceAdmin</span>
                                 </a>
                             </div><!-- End Logo -->
 
@@ -57,7 +56,7 @@
 
                                 </div>
                                 <div class="col-12">
-                                    <center>  {{ form_widget (form.ajouter,{'attr':{'class':'btn btn-primary'}}) }} </center>
+                                    <center>  {{ form_widget (form.Confirmer,{'attr':{'class':'btn btn-outline-info'}}) }} </center>
                                 </div>
 
                                 {{ form_end (form) }}
