--- a/templates/entretien/index.html.twig
+++ b/templates/entretien/index.html.twig
@@ -25,8 +25,8 @@
                 <td>{{ entretien.iduser }}</td>
                 <td>{{ entretien.lienentretien }}</td>
                 <td>
-                    <a href="{{ path('app_entretien_show', {'identretien': entretien.identretien}) }}">show</a>
-                    <a href="{{ path('app_entretien_edit', {'identretien': entretien.identretien}) }}">edit</a>
+                    <a class="btn btn-outline-info" href="{{ path('app_entretien_show', {'identretien': entretien.identretien}) }}">show</a>
+                    <a class="btn btn-outline-info" href="{{ path('app_entretien_edit', {'identretien': entretien.identretien}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_entretien_new') }}">Create new</a>
+    <a class="btn btn-outline-info" href="{{ path('app_entretien_new') }}">Create new</a>
 {% endblock %}
