--- a/templates/stage/show.html.twig
+++ b/templates/stage/show.html.twig
@@ -37,9 +37,9 @@
            
         </tbody>
     </table>
-   <a class="btn" href="{{ path('app_stage_mesStage', {'idpersonne': "1"}) }}">back to list</a>
+   <a class="btn btn-outline-warning" href="{{ path('app_stage_mesStage', {'idpersonne': app.user.id}) }}">back to list</a>
 
-    <a class="btn" href="{{ path('app_stage_edit', {'idstage': stage.idstage}) }}">edit</a>
+    <a class="btn btn-outline-info" href="{{ path('app_stage_edit', {'idstage': stage.idstage}) }}">edit</a>
 
    
 
