--- a/templates/rate/livre.html.twig
+++ b/templates/rate/livre.html.twig
@@ -132,7 +132,7 @@
 
 
     <center>
-        <div style="width:500px; height: 500px ">
+        <div style="width:500px;  ">
     <ul class="cards">
         <li>
             <a href="" class="card">
@@ -155,7 +155,7 @@
         </div>
         </center>
 
-<br> <br>
+
 <center>
         <div class="container">
                 <div class="row">
@@ -189,7 +189,6 @@
         </div>
 </center>
 
-       <br>
     <center>
             Vous pouvez telecharger ce livre
     <a href ="{{ path ('telecharger',{'id':infoL.idl })}}">    <button  class="btn btn-success"
