affiche profil pour le recruteur

--- a/templates/demandestage/index.html.twig
+++ b/templates/demandestage/index.html.twig
@@ -21,7 +21,7 @@
                 
                 <td>{{ demandestage.etat }}</td>
                 <td> {{ demandestage.idstage}}</td>
-                <td>{{ demandestage.iduser }}</td>
+                <td><a href="{{ path('user_profile',{'id':demandestage.iduser.id }) }}">{{ demandestage.iduser.nom }} {{ demandestage.iduser.prenom }}</a></td>
                 <td>
                     <a class="btn btn-outline-info" href="{{ path('app_demandestage_show', {'iddemande': demandestage.iddemande}) }}">show</a>
                     <a class="btn btn-outline-success" href="{{ path('app_demandestage_edit', {'iddemande': demandestage.iddemande}) }}">edit</a>
