--- a/templates/acceuil/acceuil.html.twig
+++ b/templates/acceuil/acceuil.html.twig
@@ -293,10 +293,10 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center text-info px-3">Instructors</h6>
-                    <h1 class="mb-5">Notres Equipe</h1>
+                    <h1 class="mb-5">Notre Equipe</h1>
                 </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="row g-4" style="justify-content:center;align-items:center">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item bg-light">
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="{{ asset('assets2/img/team-1.jpg') }}" alt="">
@@ -314,7 +314,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item bg-light">
+                            <div class="overflow-hidden">
+                                <img class="img-fluid" src="{{ asset('assets2/img/team-5.jpg') }}" alt="">
+                            </div>
+                            <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
+                                <div class="bg-light d-flex justify-content-center pt-2 px-1">
+                                    <a class="btn btn-sm-square btn-info mx-1" href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-sm-square btn-info mx-1" href=""><i class="fab fa-twitter"></i></a>
+                                    <a class="btn btn-sm-square btn-info mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4">
+                                <h5 class="mb-0">Anis Mallek</h5>
+                                <small>Marketing Agent</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item bg-light">
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="{{ asset('assets2/img/team-2.jpg') }}" alt="">
@@ -332,7 +350,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item bg-light">
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="{{ asset('assets2/img/team-3.jpg') }}" alt="">
@@ -350,7 +368,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item bg-light">
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="{{ asset('assets2/img/team-4.jpg') }}" alt="">
